# kurbopy

./: .gitignore  .readthedocs.yml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml  manylinux.yml
docs/: affine.rst  arc.rst  bezpath.rst  circle.rst  common.rst  conf.py  constpoint.rst  cubicbez.rst  ellipse.rst  index.rst  insets.rst  line.rst  mindistance.rst  pathseg.rst  point.rst  quadbez.rst  quadspline.rst  rect.rst  requirements.txt  size.rst  translatescale.rst  vec2.rst
kurbopy/: __init__.py  magic.py
src/: affine.rs  arc.rs  bezpath.rs  circle.rs  common.rs  constpoint.rs  cubicbez.rs  ellipse.rs  insets.rs  lib.rs  line.rs  magic.rs  mindistance.rs  nearest.rs  paramcurve.rs  pathel.rs  pathseg.rs  point.rs  quadbez.rs  quadspline.rs  rect.rs  shape.rs  size.rs  translatescale.rs  vec2.rs
tests/: test_affine.py  test_arc.py  test_basic.py  test_bezpath.py  test_cubicbez.py  test_insets.py
