[package]
name = "kurbopy"
version = "0.11.1"
authors = ["Simon Cozens <simon@simon-cozens.org>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
kurbo = { version = "0.11.1" }
pyo3 = { version = "^0.21.2", features = ["extension-module", "abi3-py37", "multiple-pymethods"] }
itertools = "0.10.3"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = "debuginfo"
