[build-system]
requires = ["maturin>=1.3"]
build-backend = "maturin"

[project]
name = "kurbopy"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
]
dependencies = [
    "fontTools >= 4.0",
]

[tool.maturin]
bindings = "pyo3"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
target-version = ["py37"]

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
[tool.isort]
profile = "black"
known_first_party = "kurbopy"
